// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customer match snapshot 1`] = `
<DocumentFragment>
  <div
    class="customer"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          ФИО
        </div>
        <div
          class="value"
        >
          Иван Иванович Иванов
        </div>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Статус обработки
        </div>
        <div
          class="value"
        >
          Processed
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Пол
        </div>
        <div
          class="value"
        >
          Женский
        </div>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Дата рождения
        </div>
        <div
          class="value"
        >
          1990-01-31
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="name"
      >
        Мобильный телефон
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          79001234567
        </div>
        <p
          class="good status"
        >
          Валидный 
        </p>
        <p
          class="good status"
        >
          Подтвержден 
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          79652026149
        </div>
        <p
          class="bad status"
        >
          Ожидает подтверждения 
        </p>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="name"
      >
        Email
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          test@mindbox.ru
        </div>
        <p
          class="good status"
        >
          Валидный 
        </p>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Зона
        </div>
        <div
          class="value"
        >
          Москва
        </div>
        <p
          class="neutral status"
        >
          MoscowCity
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Часовой пояс
        </div>
        <div
          class="value"
        >
          Asia/Hong_Kong
        </div>
        <p
          class="neutral status"
        >
          Определили в трекере
        </p>
      </div>
    </div>
    <div>
      <div
        class="name"
      >
        Дополнительные поля 
        <button
          class="small button normal dropdown"
        >
          <img
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customer match snapshot 2`] = `
<DocumentFragment>
  <div
    class="customer"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          ФИО
        </div>
        <div
          class="value"
        >
          Иван Иванович Иванов
        </div>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Статус обработки
        </div>
        <div
          class="value"
        >
          Processed
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Пол
        </div>
        <div
          class="value"
        >
          Женский
        </div>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Дата рождения
        </div>
        <div
          class="value"
        >
          1990-01-31
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="name"
      >
        Мобильный телефон
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          79001234567
        </div>
        <p
          class="good status"
        >
          Валидный 
        </p>
        <p
          class="good status"
        >
          Подтвержден 
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          79652026149
        </div>
        <p
          class="bad status"
        >
          Ожидает подтверждения 
        </p>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="name"
      >
        Email
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          test@mindbox.ru
        </div>
        <p
          class="good status"
        >
          Валидный 
        </p>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Зона
        </div>
        <div
          class="value"
        >
          Москва
        </div>
        <p
          class="neutral status"
        >
          MoscowCity
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Часовой пояс
        </div>
        <div
          class="value"
        >
          Asia/Hong_Kong
        </div>
        <p
          class="neutral status"
        >
          Определили в трекере
        </p>
      </div>
    </div>
    <div>
      <div
        class="name"
      >
        Дополнительные поля 
        <button
          class="small button normal dropdown"
        >
          <img
            src="test-file-stub"
          />
        </button>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          child1Sex
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          clearTestClient
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          isCompany
        </div>
        <div
          class="half value"
        >
          true
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          multiline
        </div>
        <div
          class="half value"
        >
          <div>
            1
          </div>
          <div>
            2
          </div>
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          singleline
        </div>
        <div
          class="half value"
        >
          <div>
            56
          </div>
          <div>
            <span
              class="neutral"
            >
              Пусто
            </span>
          </div>
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          walletCardLink
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          walletCardQrCodeLink
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline"
      >
        <div
          class="half value"
        >
          walletCardSubscription
        </div>
        <div
          class="half value"
        >
          false
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customer match snapshot 3`] = `
<DocumentFragment>
  <div
    class="customer"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          ФИО
        </div>
        <div
          class="value"
        >
          Иван Иванович Иванов
        </div>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Статус обработки
        </div>
        <div
          class="value"
        >
          Processed
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Пол
        </div>
        <div
          class="value"
        >
          Женский
        </div>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Дата рождения
        </div>
        <div
          class="value"
        >
          1990-01-31
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="name"
      >
        Мобильный телефон
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          79001234567
        </div>
        <p
          class="good status"
        >
          Валидный 
        </p>
        <p
          class="good status"
        >
          Подтвержден 
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          79652026149
        </div>
        <p
          class="bad status"
        >
          Ожидает подтверждения 
        </p>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="name"
      >
        Email
      </div>
      <div
        class="half"
      >
        <div
          class="value"
        >
          test@mindbox.ru
        </div>
        <p
          class="good status"
        >
          Валидный 
        </p>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Зона
        </div>
        <div
          class="value"
        >
          Москва
        </div>
        <p
          class="neutral status"
        >
          MoscowCity
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Часовой пояс
        </div>
        <div
          class="value"
        >
          Asia/Hong_Kong
        </div>
        <p
          class="neutral status"
        >
          Определили в трекере
        </p>
      </div>
    </div>
    <div>
      <div
        class="name"
      >
        Дополнительные поля 
        <button
          class="small button normal dropdown"
        >
          <img
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
